--- a/Mi Macro/Mi Macro/Mi Macro.csproj
+++ b/Mi Macro/Mi Macro/Mi Macro.csproj
@@ -55,6 +55,9 @@
     <EmbeddedResource Update="view\VSign.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="view\VTarget.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
 
   <ItemGroup>
